SLCORE-1555 Fix flaky test